--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1003,11 +1003,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "URL                            0\n",
+       "URL_LENGTH                     0\n",
+       "CHARSET                        0\n",
+       "SERVER                         1\n",
+       "CONTENT_LENGTH               812\n",
+       "WHOIS_COUNTRY                  0\n",
+       "WHOIS_STATEPRO                 0\n",
+       "WHOIS_REGDATE                  0\n",
+       "WHOIS_UPDATED_DATE             0\n",
+       "TCP_CONVERSATION_EXCHANGE      0\n",
+       "DIST_REMOTE_TCP_PORT           0\n",
+       "REMOTE_IPS                     0\n",
+       "APP_BYTES                      0\n",
+       "DNS_QUERY_TIMES                1\n",
+       "Type                           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "websites.isnull().sum()"
    ]
   },
   {
@@ -1025,7 +1060,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45.59%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'{websites.CONTENT_LENGTH.isnull().sum() / websites.shape[0]:.2%}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Almost 50% of the data is missing for `CONTENT_LENGTH` column, thus we can drop it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "websites = websites.drop('CONTENT_LENGTH', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are two rows more we can drop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "websites = websites.dropna()"
    ]
   },
   {
@@ -1052,7 +1136,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Examine missing values in each column\n"
+    "# Examine missing values in each column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "URL                          0\n",
+       "URL_LENGTH                   0\n",
+       "CHARSET                      0\n",
+       "SERVER                       0\n",
+       "WHOIS_COUNTRY                0\n",
+       "WHOIS_STATEPRO               0\n",
+       "WHOIS_REGDATE                0\n",
+       "WHOIS_UPDATED_DATE           0\n",
+       "TCP_CONVERSATION_EXCHANGE    0\n",
+       "DIST_REMOTE_TCP_PORT         0\n",
+       "REMOTE_IPS                   0\n",
+       "APP_BYTES                    0\n",
+       "DNS_QUERY_TIMES              0\n",
+       "Type                         0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "websites.isnull().sum()"
    ]
   },
   {
