--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -54,7 +54,7 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 107,
+      "execution_count": 129,
       "outputs": []
     },
     {
@@ -81,7 +81,7 @@
       "source": [
         "websites = pd.read_csv('https://raw.githubusercontent.com/eduardoheros/lab-supervised-learning/master/website.csv')"
       ],
-      "execution_count": 108,
+      "execution_count": 130,
       "outputs": []
     },
     {
@@ -115,12 +115,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 275
         },
-        "outputId": "c98839a0-3646-4ffa-d9db-7d02bd9a41d1"
+        "outputId": "f1ff82c9-52d8-464a-956a-dc655ea3dbbb"
       },
       "source": [
         "websites.head()"
       ],
-      "execution_count": 109,
+      "execution_count": 131,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -306,7 +306,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 109
+          "execution_count": 131
         }
       ]
     },
@@ -319,12 +319,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 521
         },
-        "outputId": "f9e2d3f7-f2a3-4459-85b9-6e043a2fbc60"
+        "outputId": "42be6214-d413-45b6-862c-e4a3c15df245"
       },
       "source": [
         "websites.info()"
       ],
-      "execution_count": 110,
+      "execution_count": 132,
       "outputs": [
         {
           "output_type": "stream",
@@ -363,41 +363,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "P4bnUSN_aVX2",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 125
-        },
-        "outputId": "ea2eeed7-c0e5-41e1-fe41-cacf8474da2e"
-      },
-      "source": [
-        "pd.unique(websites.WHOIS_COUNTRY)"
-      ],
-      "execution_count": 111,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array(['None', 'US', 'SC', 'GB', 'UK', 'RU', 'AU', 'CA', 'PA', 'se', 'IN',\n",
-              "       'LU', 'TH', \"[u'GB'; u'UK']\", 'FR', 'NL', 'UG', 'JP', 'CN', 'SE',\n",
-              "       'SI', 'IL', 'ru', 'KY', 'AT', 'CZ', 'PH', 'BE', 'NO', 'TR', 'LV',\n",
-              "       'DE', 'ES', 'BR', 'us', 'KR', 'HK', 'UA', 'CH', 'United Kingdom',\n",
-              "       'BS', 'PK', 'IT', 'Cyprus', 'BY', 'AE', 'IE', 'UY', 'KG'],\n",
-              "      dtype=object)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 111
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Qq_DKnjuaVX8",
@@ -429,7 +394,7 @@
       "source": [
         "import seaborn as sns"
       ],
-      "execution_count": 112,
+      "execution_count": 134,
       "outputs": []
     },
     {
@@ -441,7 +406,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 869
         },
-        "outputId": "3f20af0c-87bb-48dc-e963-9c9b50372fda"
+        "outputId": "22311f2b-7af6-4fd0-e669-2c14757922d2"
       },
       "source": [
         "def visual_corr(websites):\n",
@@ -453,7 +418,7 @@
         "  sns.heatmap(matrix_corr,annot=True,mask=mask,cbar=False,linewidths=1,cmap=\"YlGnBu\",center=0);\n",
         "visual_corr(websites)"
       ],
-      "execution_count": 113,
+      "execution_count": 135,
       "outputs": [
         {
           "output_type": "display_data",
@@ -488,7 +453,7 @@
         "    x=1000*x\n",
         "  return x"
       ],
-      "execution_count": 114,
+      "execution_count": 136,
       "outputs": []
     },
     {
@@ -507,7 +472,7 @@
         "  sort_corr=sum_matrix_corr.sort_values(by=\"SUM\",ascending=False)\n",
         "  return sort_corr[\"SUM\"]"
       ],
-      "execution_count": 115,
+      "execution_count": 137,
       "outputs": []
     },
     {
@@ -519,13 +484,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 287
         },
-        "outputId": "a6405c86-86fc-4c17-9ea4-1f7d1d593e2a"
+        "outputId": "20904d26-cd60-4ef8-97d4-b48722a52b14"
       },
       "source": [
         "##Las columnas listadas presentan las correlaciones mas altas\n",
         "col_rem(websites)"
       ],
-      "execution_count": 116,
+      "execution_count": 138,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -551,7 +516,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 116
+          "execution_count": 138
         }
       ]
     },
@@ -581,7 +546,7 @@
       "source": [
         "columnas=col_rem(websites).index[0:3]"
       ],
-      "execution_count": 117,
+      "execution_count": 139,
       "outputs": []
     },
     {
@@ -593,13 +558,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 868
         },
-        "outputId": "51554c1e-8f9d-46b8-8cf0-90bace31413d"
+        "outputId": "b10f1bbb-1edb-4923-c7c4-ef89dd49f036"
       },
       "source": [
         "websites.drop(columns=columnas,inplace=True)\n",
         "visual_corr(websites)"
       ],
-      "execution_count": 118,
+      "execution_count": 140,
       "outputs": [
         {
           "output_type": "display_data",
@@ -624,12 +589,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 233
         },
-        "outputId": "24a19f4b-c050-40a8-9961-a1bbd1d4fdd3"
+        "outputId": "6a228a8f-826b-4d1f-87db-e45c7d4c445e"
       },
       "source": [
         "col_rem(websites)"
       ],
-      "execution_count": 119,
+      "execution_count": 141,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -652,7 +617,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 119
+          "execution_count": 141
         }
       ]
     },
@@ -665,13 +630,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 215
         },
-        "outputId": "b8c46001-44c1-40e9-d204-84de779dc7fa"
+        "outputId": "a55c82b7-f2ae-44c7-ca93-b38bd18e6369"
       },
       "source": [
         "websites.drop(columns=\"REMOTE_APP_BYTES\",inplace=True)\n",
         "col_rem(websites)"
       ],
-      "execution_count": 120,
+      "execution_count": 142,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -693,7 +658,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 120
+          "execution_count": 142
         }
       ]
     },
@@ -706,13 +671,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 197
         },
-        "outputId": "518cf289-5524-4a42-c425-5cc0b3a51914"
+        "outputId": "ec21b877-df32-4990-9043-27320de96074"
       },
       "source": [
         "websites.drop(columns=\"NUMBER_SPECIAL_CHARACTERS\",inplace=True)\n",
         "col_rem(websites)"
       ],
-      "execution_count": 121,
+      "execution_count": 143,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -733,7 +698,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 121
+          "execution_count": 143
         }
       ]
     },
@@ -746,12 +711,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 831
         },
-        "outputId": "4095efd5-f7a1-4018-85ca-1e07e2bc126c"
+        "outputId": "29171a37-650b-41e5-d446-fbd29e0bf266"
       },
       "source": [
         "visual_corr(websites)"
       ],
-      "execution_count": 122,
+      "execution_count": 144,
       "outputs": [
         {
           "output_type": "display_data",
@@ -788,12 +753,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 431
         },
-        "outputId": "76ac5efe-f497-4c7d-d64d-544b628dd550"
+        "outputId": "2efd26ed-6128-4aea-815f-2928e56dbbae"
       },
       "source": [
         "websites.info()"
       ],
-      "execution_count": 123,
+      "execution_count": 145,
       "outputs": [
         {
           "output_type": "stream",
@@ -848,7 +813,7 @@
       "source": [
         "websites.drop(columns=\"CONTENT_LENGTH\",inplace=True)"
       ],
-      "execution_count": 125,
+      "execution_count": 146,
       "outputs": []
     },
     {
@@ -861,7 +826,7 @@
       "source": [
         "websites.dropna(inplace=True)"
       ],
-      "execution_count": 127,
+      "execution_count": 147,
       "outputs": []
     },
     {
@@ -885,12 +850,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 413
         },
-        "outputId": "ec769d72-5309-42f8-b288-8311714eb7a6"
+        "outputId": "bdf7634b-2ca3-483b-b061-67263aee0a27"
       },
       "source": [
         "websites.info()"
       ],
-      "execution_count": 128,
+      "execution_count": 148,
       "outputs": [
         {
           "output_type": "stream",
@@ -964,15 +929,83 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aXA23yLWaVZX",
+        "id": "P4bnUSN_aVX2",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 125
+        },
+        "outputId": "801cfc43-88bc-47fc-b3c6-b00a4c151c94"
       },
       "source": [
-        "# Your code here\n"
+        "pd.unique(websites.WHOIS_COUNTRY)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 174,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['None', 'US', 'SC', 'GB', 'UK', 'RU', 'AU', 'CA', 'PA', 'se', 'IN',\n",
+              "       'LU', 'TH', \"[u'GB'; u'UK']\", 'FR', 'NL', 'UG', 'JP', 'CN', 'SE',\n",
+              "       'SI', 'IL', 'ru', 'KY', 'AT', 'CZ', 'PH', 'BE', 'NO', 'TR', 'LV',\n",
+              "       'DE', 'ES', 'BR', 'us', 'KR', 'HK', 'UA', 'CH', 'United Kingdom',\n",
+              "       'BS', 'PK', 'IT', 'Cyprus', 'BY', 'AE', 'IE', 'UY', 'KG'],\n",
+              "      dtype=object)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 174
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aXA23yLWaVZX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 233
+        },
+        "outputId": "19669029-72a4-4c02-eebe-02258f8a7975"
+      },
+      "source": [
+        "websites.WHOIS_COUNTRY.str.replace('Cyprus',\"CY\")\n",
+        "websites.WHOIS_COUNTRY.str.replace('us',\"US\")\n",
+        "websites.WHOIS_COUNTRY.str.replace('se',\"SE\")\n",
+        "websites.WHOIS_COUNTRY.str.replace('United Kingdom',\"UK\")\n",
+        "websites.WHOIS_COUNTRY.str.replace('GB',\"UK\")\n",
+        "websites.WHOIS_COUNTRY.str.replace(\"[u'GB'; u'UK']\",\"UK\")"
+      ],
+      "execution_count": 173,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0       None\n",
+              "1       None\n",
+              "2       None\n",
+              "3        UKS\n",
+              "4        UKS\n",
+              "        ... \n",
+              "1776      ES\n",
+              "1777      ES\n",
+              "1778     UKS\n",
+              "1779     UKS\n",
+              "1780     UKS\n",
+              "Name: WHOIS_COUNTRY, Length: 1779, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 173
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1000,7 +1033,7 @@
       "source": [
         "# Your code here\n"
       ],
-      "execution_count": null,
+      "execution_count": 150,
       "outputs": []
     },
     {
@@ -1024,7 +1057,7 @@
       "source": [
         "# Your code here\n"
       ],
-      "execution_count": null,
+      "execution_count": 151,
       "outputs": []
     },
     {
@@ -1051,7 +1084,7 @@
       "source": [
         "# Your code here\n"
       ],
-      "execution_count": null,
+      "execution_count": 152,
       "outputs": []
     },
     {
@@ -1076,7 +1109,7 @@
       "source": [
         "# Your code here\n"
       ],
-      "execution_count": null,
+      "execution_count": 153,
       "outputs": []
     },
     {
@@ -1099,7 +1132,7 @@
       "source": [
         "# Your code here\n"
       ],
-      "execution_count": null,
+      "execution_count": 154,
       "outputs": []
     },
     {
@@ -1122,7 +1155,7 @@
       "source": [
         "# Your code here"
       ],
-      "execution_count": null,
+      "execution_count": 155,
       "outputs": []
     },
     {
@@ -1147,7 +1180,7 @@
       "source": [
         "# Your code here\n"
       ],
-      "execution_count": null,
+      "execution_count": 156,
       "outputs": []
     },
     {
@@ -1170,7 +1203,7 @@
       "source": [
         "# Your comment here\n"
       ],
-      "execution_count": null,
+      "execution_count": 157,
       "outputs": []
     },
     {
@@ -1195,7 +1228,7 @@
       "source": [
         "# Your code here\n"
       ],
-      "execution_count": null,
+      "execution_count": 158,
       "outputs": []
     },
     {
@@ -1209,7 +1242,7 @@
       "source": [
         "# Count `SERVER` value counts here\n"
       ],
-      "execution_count": null,
+      "execution_count": 159,
       "outputs": []
     },
     {
@@ -1232,7 +1265,7 @@
       "source": [
         "# Your code here\n"
       ],
-      "execution_count": null,
+      "execution_count": 160,
       "outputs": []
     },
     {
@@ -1255,7 +1288,7 @@
       "source": [
         "# Your code here\n"
       ],
-      "execution_count": null,
+      "execution_count": 161,
       "outputs": []
     },
     {
@@ -1282,7 +1315,7 @@
         "\n",
         "# Your code here:\n"
       ],
-      "execution_count": null,
+      "execution_count": 162,
       "outputs": []
     },
     {
@@ -1308,7 +1341,7 @@
         "# Your code here:\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 163,
       "outputs": []
     },
     {
@@ -1332,7 +1365,7 @@
         "# Your code here:\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 164,
       "outputs": []
     },
     {
@@ -1356,7 +1389,7 @@
         "# Your code here:\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 165,
       "outputs": []
     },
     {
@@ -1380,7 +1413,7 @@
         "# Your conclusions here:\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 166,
       "outputs": []
     },
     {
@@ -1406,7 +1439,7 @@
         "# Your code here:\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 167,
       "outputs": []
     },
     {
@@ -1430,7 +1463,7 @@
         "# Your code here:\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 168,
       "outputs": []
     },
     {
@@ -1456,7 +1489,7 @@
         "# Your code here:\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 169,
       "outputs": []
     },
     {
@@ -1480,7 +1513,7 @@
         "# Your conclusions here:\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 170,
       "outputs": []
     },
     {
@@ -1509,7 +1542,7 @@
       "source": [
         "# Your code here"
       ],
-      "execution_count": null,
+      "execution_count": 171,
       "outputs": []
     }
   ]
